--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Frijole&display=swap" rel="stylesheet">
-    <little> Em busca da cidade perdida</little>
+    <title> Em busca da cidade perdida</title>
     
 </head>
 <body>
